@@ -1,5 +1,7 @@
 package com.jolly.astra;
 
+import com.jolly.heimdall.OAuthentication;
+import com.jolly.heimdall.claimset.OpenIdClaimSet;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.security.core.Authentication;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -8,16 +10,27 @@ import org.springframework.web.bind.annotation.RestController;
 @RestController
 public class GreetingController {
 
-	@GetMapping("/greet")
-	public MessageDto getGreeting(Authentication auth) {
-		return new MessageDto("Hi %s! You are granted with: %s.".formatted(auth.getName(), auth.getAuthorities()));
-	}
+//	@GetMapping("/greet")
+//	public MessageDto getGreeting(Authentication auth) {
+//		return new MessageDto("Hi %s! You are granted with: %s.".formatted(auth.getName(), auth.getAuthorities()));
+//	}
+  @GetMapping("/greet")
+  @PreAuthorize("isAuthenticated()")
+  public String greet(OAuthentication<OpenIdClaimSet> auth) {
+    return String.format("Hi %s! You are granted with %s.", auth.getName(), auth.getAuthorities());
+  }
 
 	@GetMapping("/restricted")
-	@PreAuthorize("hasAnyAuthority(T(com.jolly.astra.security.AuthoritiesConstants).ADMIN)")
+//	@PreAuthorize("hasAnyAuthority(T(com.jolly.astra.security.AuthoritiesConstants).ADMIN)")
+  @PreAuthorize("hasRole(T(com.jolly.astra.security.AuthoritiesConstants).ADMIN)")
 	public MessageDto getRestricted() {
 		return new MessageDto("You are an admin!");
 	}
+
+  @GetMapping("/secured")
+  public MessageDto getSecured() {
+    return new MessageDto("You are an admin!");
+  }
 
 	public record MessageDto(String body) {
 	}
